[project]
name = "deep-learning-26wi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "jupyter>=1.1.1",
    "pandas>=3.0.1",
    "tqdm>=4.67.3",
    "transformers>=5.2.0",
]
